Fix #5085 Misaligned grid headers in Firefox

--- a/styles/web/common/grid.less
+++ b/styles/web/common/grid.less
@@ -99,8 +99,8 @@
     display: block;
     min-height: 18px;
     line-height: 18px; /* due to sorting icons*/
-    margin: -.5em -.6em -.4em -.6em;
-    padding: .5em .6em .4em .6em;
+    margin: -.5em -.6em -.4em 0;
+    padding: .5em .6em .4em 0;
     overflow: hidden;
     text-overflow: ellipsis;
 }
